3822B1FI3/9_gelu_ocl/koshkin_nikita/log.txt
In file included from /usr/include/CL/cl.h:20,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/koshkin_nikita/gelu_ocl.h:8,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/koshkin_nikita/gelu_ocl.cpp:1:
/usr/include/CL/cl_version.h:22:104: note: ‘#pragma message: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)’
   22 | #pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)")
      |                                                                                                        ^
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/koshkin_nikita/gelu_ocl.cpp: In function ‘GeluOCLState* GeluOCL_Init(int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/koshkin_nikita/gelu_ocl.cpp:41:36: warning: ‘_cl_command_queue* clCreateCommandQueue(cl_context, cl_device_id, cl_command_queue_properties, cl_int*)’ is deprecated [-Wdeprecated-declarations]
   41 |     s->queue = clCreateCommandQueue(s->context, s->device, 0, nullptr);
      |                ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/koshkin_nikita/gelu_ocl.h:8,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/koshkin_nikita/gelu_ocl.cpp:1:
/usr/include/CL/cl.h:1906:1: note: declared here
 1906 | clCreateCommandQueue(cl_context                     context,
      | ^~~~~~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/koshkin_nikita/gelu_ocl.cpp:43:23: error: ‘kernel’ was not declared in this scope
   43 |     const char* src = kernel;
      |                       ^~~~~~
